--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 <div id="controls">
   <label class="X"
     >Строки:
-    <input id="x-ax" type="number" value="50" />
+    <input id="x-ax" type="number" />
   </label>
   <label class="Y"
     >Колонки:
-    <input id="y-ax" type="number" value="50" />
+    <input id="y-ax" type="number" />
   </label>
   <label class="speed"
     >Скорость игры:
     <select id="speed"></select>
     <button id="start"><span>Старт</span></button>
-    <button id="clear"><span>Очистить</span></button>
+    <button id="clear"><span>Обновить</span></button>
     <button id="random"><span>Создать жизнь</span></button>
   </label>
 </div>
